Fixed css. Set table width to 100% and turned overflow-x off.

--- a/v4/scoreboardv4.css
+++ b/v4/scoreboardv4.css
@@ -13,7 +13,7 @@
 table{
 	border-collapse: collapse;
 	table-layout: fixed;
-	width:305px;
+	width:100%;
 	font-size: 12px;
 
 }
